--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
   </div>
 
   <div class="container">
-    <div class="information-course">
+    <div style="background-color: #0B0742; height: 450px; position: absolute; left: 0; right: 0; top: 0; z-index: -1;">
+    </div>
+    <div class="sub-container">
+      <div class="information-course">
       <div class="breadcrumb">
         <a class="breadcrumb-link" href="/courses/development/">Development</a>
         <span class="breadcrumb-separator">›</span>
@@ -164,6 +167,7 @@
       </div>
 
     </div>
+    </div>
   </div>
 
 
@@ -181,7 +185,7 @@
       <p>4 sections-5 lectures-18h total</p>
 
       <div class="section">
-        <div class="section-header" onclick="toggleSection(this)">
+        <div class="section-header">
           <strong>▶ Spring Boot 3 Project - Introduction</strong>
           <span>5 lectures • 10min</span>
         </div>
@@ -195,14 +199,14 @@
       </div>
 
       <div class="section">
-        <div class="section-header" onclick="toggleSection(this)">
+        <div class="section-header">
           <strong>▶ Spring Boot 3 Project - Overview</strong>
           <span>3 lectures • 9min</span>
         </div>
         <ul class="section-body">
-          <li><a href="#">Overview of Project</a> <span>03:00</span></li>
-          <li><a href="#">Tools Required</a> <span>02:00</span></li>
-          <li><a href="#">Initial Setup</a> <span>04:00</span></li>
+          <li><a href="#" >Overview of Project</a> <span>03:00</span></li>
+          <li><a href="#" >Tools Required</a> <span>02:00</span></li>
+          <li><a href="#" >Initial Setup</a> <span>04:00</span></li>
         </ul>
       </div>
 
@@ -356,17 +360,7 @@
 
   </div>
 
-
-
-
-
-
-
-
-
-
-
-
+  <script src="./script.js"></script>
 </body>
 
 </html>
